gitops/app-ruim/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress-app
  namespace: app-ruim
  labels:
    app: stress-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stress-app
  template:
    metadata:
      labels:
        app: stress-app
    spec:
      containers:
        - name: stress-app
          image: image-registry.openshift-image-registry.svc:5000/demo-builds/stress-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "2"
              memory: 2Gi
            limits:
              cpu: "2"
              memory: 2Gi
