gitops/app-ruim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stress-app
  namespace: app-ruim
spec:
  selector:
    app: stress-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
