gitops/app-ruim/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: stress-app
  namespace: app-ruim
spec:
  to:
    kind: Service
    name: stress-app
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
